...
                                            </imageView>
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="K7E-Cl-Qmz">
                                                <rect key="frame" x="280" y="32.5" width="124" height="262"/>
                                                <subviews>
                                                    <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GeB-ge-seT" customClass="MoreInfoButton" customModule="MyCV" customModuleProvider="target">
                                                        <rect key="frame" x="0.0" y="105" width="124" height="52.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Soft"/>
                                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
                                                        <state key="normal" title="Soft skills">
                                                            <color key="titleColor" name="mainBlue"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                                        <connections>
                                                            <action selector="moreInfoPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="dgi-qW-DfL"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QEY-Ye-HIR" customClass="MoreInfoButton" customModule="MyCV" customModuleProvider="target">
                                                        <rect key="frame" x="0.0" y="44.5" width="124" height="52.5"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Technical"/>
                                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
                                                        <state key="normal" title="Technical">
                                                            <color key="titleColor" name="mainBlue"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                                        <connections>
                                                            <action selector="moreInfoPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="g0y-vc-XX9"/>
                                                        </connections>
                                                    </button>
                                                    <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kqj-1p-Oob" customClass="MoreInfoButton" customModule="MyCV" customModuleProvider="target">
                                                        <rect key="frame" x="0.0" y="165.5" width="124" height="52"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="Hobbies"/>
                                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
                                                        <state key="normal" title="Hobbies">
                                                            <color key="titleColor" name="mainBlue"/>
                                                        </state>
                                                        <userDefinedRuntimeAttributes>
                                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
...
                                            <constraint firstItem="gDU-eS-TAY" firstAttribute="height" secondItem="xcM-8c-9up" secondAttribute="height" multiplier="0.9" id="zWr-ng-bTb"/>
                                        </constraints>
                                    </view>
                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="M6k-Ml-wC6" customClass="CardView" customModule="MyCV" customModuleProvider="target">
                                        <rect key="frame" x="5" y="344.5" width="404" height="500"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" horizontalCompressionResistancePriority="200" verticalCompressionResistancePriority="200" text="Basic Info." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" tr
                                                <rect key="frame" x="121.5" y="8" width="161.5" height="50"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="50" id="L0p-Qx-lrw"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="32"/>
                                                <color key="textColor" red="1" green="0.31372549019607843" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
